--- a/requirements-windows.txt
+++ b/requirements-windows.txt
@@ -7,6 +7,7 @@ filelock==3.0.12
 imutils==0.5.3
 kiwisolver==1.1.0
 matplotlib==3.1.3
+mysql-connector==2.2.9
 numpy==1.18.1
 opencv-python==4.2.0.32
 pyparsing==2.4.6
